<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/button_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/button_payment"
        android:enabled="true"
        android:icon="@drawable/ic_payment_black_24dp"
        android:title="@string/title_payment"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/button_rate"
        android:enabled="true"
        android:icon="@drawable/ic_rate_review_black_24dp"
        android:title="@string/title_rate"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/button_notification"
        android:enabled="true"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/button_contact"
        android:enabled="true"
        android:icon="@drawable/ic_perm_contact_calendar_black_24dp"
        android:title="@string/title_contact"
        app:showAsAction="ifRoom" />
</menu>